--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -8,11 +8,18 @@ jobs:
         steps:
         - name: Checkout Repo
           uses: actions/checkout@v4
-        - name: Welcome Message
-          run: echo "My first Github Actions Job"
 
-        - name: List Files
-          run: ls
+        - name: List and Read Files
+          run: |
+            echo "My first Github Actions Job"
+            ls -ltra
+            cat README.md
 
-        - name: Read File
-          run: cat README.md
+        - name: Generate Ascii Artwork
+          run: cowsay -f Dragon "Hello Prateek" >> dragon.txt
+
+       # - name: List Files
+        #  run: ls
+
+        #- name: Read File
+         # run: cat README.md
