--- a/.github/workflows/executing-shell.yml
+++ b/.github/workflows/executing-shell.yml
@@ -14,5 +14,5 @@ jobs:
 
         - name: Executing shell commands
           run: |
-           chomd +x ascii-script.sh
+           chmod +x ascii-script.sh
            ./ascii-script.sh
