--- a/.github/workflows/multiple-workflow.yml
+++ b/.github/workflows/multiple-workflow.yml
@@ -19,6 +19,7 @@ jobs:
           run: sleep 30
 
     Test_job:
+        needs: Build_job
         runs-on: ubuntu-latest
         steps:
         - name: Sleep for 10 seconds
@@ -28,6 +29,7 @@ jobs:
           run: grep -i "Hello" dragon.txt
 
     Deployment_job:
+        needs: [Test_job]
         runs-on: ubuntu-latest
         steps:
         - name: Read File
