--- a/.github/workflows/multiple-workflow.yml
+++ b/.github/workflows/multiple-workflow.yml
@@ -28,7 +28,7 @@ jobs:
          - name: Download artifacts
          - uses: actions/download-artifact@v4
            with:
-            name: Dragon artifact file
+            - name: Dragon artifact file
 
         - name: Test file exists
           run: grep -i "Hello" dragon.txt
@@ -42,7 +42,7 @@ jobs:
          - uses: actions/download-artifact@v4
            with:
             name: Dragon artifact file
-            
+
         - name: Read File
           run: cat dragon.txt
 
