--- a/.github/workflows/multiple-workflow.yml
+++ b/.github/workflows/multiple-workflow.yml
@@ -18,8 +18,8 @@ jobs:
         - name: Uploads artifacts
         - uses: actions/upload-artifact@v4
           with:
-            - name: Dragon artifact file
-              path: dragon.txt
+            name: Dragon artifact file
+            path: dragon.txt
 
     Test_job:
         needs: Build_job
@@ -28,7 +28,7 @@ jobs:
          - name: Download artifacts
          - uses: actions/download-artifact@v4
            with:
-            - name: Dragon artifact file
+             name: Dragon artifact file
 
         - name: Test file exists
           run: grep -i "Hello" dragon.txt
@@ -41,7 +41,7 @@ jobs:
          - name: Download artifacts
          - uses: actions/download-artifact@v4
            with:
-            - name: Dragon artifact file
+             name: Dragon artifact file
 
         - name: Read File
           run: cat dragon.txt
