--- a/.github/workflows/multiple-workflow.yml
+++ b/.github/workflows/multiple-workflow.yml
@@ -15,19 +15,15 @@ jobs:
         - name: Generate Ascii Artwork in CMD
           run: cowsay -f dragon "Hello Prateek" >> dragon.txt
 
-        - name: Uploads artifacts
-        - uses: actions/upload-artifact@v4
-          with:
-            name: Dragon artifact file
-            path: dragon.txt
+        - name: Sleep for 30seconds
+          run: sleep 30
+
     Test_job:
         needs: Build_job
         runs-on: ubuntu-latest
         steps:
-         - name: Download artifacts
-           uses: actions/download-artifact@v4
-           with:
-             name: Dragon artifact file
+        - name: Sleep for 10 seconds
+          run: sleep 10
 
         - name: Test file exists
           run: grep -i "Hello" dragon.txt
@@ -36,12 +32,6 @@ jobs:
         needs: [Test_job]
         runs-on: ubuntu-latest
         steps:
-
-         - name: Download artifacts
-           uses: actions/download-artifact@v4
-           with:
-             name: Dragon artifact file
-
         - name: Read File
           run: cat dragon.txt
 
