--- a/.github/workflows/multiple-workflow.yml
+++ b/.github/workflows/multiple-workflow.yml
@@ -24,8 +24,9 @@ jobs:
         needs: Build_job
         runs-on: ubuntu-latest
         steps:
-        - name: Sleep for 10 seconds
-          run: sleep 10
+        - uses: actions/upload-artifact@v4
+          with:
+            name: Dragon file
 
         - name: Test file exists
           run: grep -i "Hello" dragon.txt
