--- a/.github/workflows/multiple-workflow.yml
+++ b/.github/workflows/multiple-workflow.yml
@@ -24,7 +24,7 @@ jobs:
         needs: Build_job
         runs-on: ubuntu-latest
         steps:
-        - uses: actions/upload-artifact@v4
+        - uses: actions/download-artifact@v4
           with:
             name: Dragon file
 
