--- a/.github/workflows/multiple-workflow.yml
+++ b/.github/workflows/multiple-workflow.yml
@@ -35,6 +35,10 @@ jobs:
         needs: [Test_job]
         runs-on: ubuntu-latest
         steps:
+        - uses: actions/download-artifact@v4
+          with:
+            name: Dragon file
+            
         - name: Read File
           run: cat dragon.txt
 
