--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Docker Build
-      run: echo docker build -t ${{CONTAINER_REGISTRY}}/$DOCKER_USERNAME/IMAGE_NAME:latest
+      run: echo docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/IMAGE_NAME:latest
 
     - name: Docker Login
       env:
