--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -8,7 +8,6 @@ on:
 
 env:
   CONTAINER_REGISTRY: docker.io
-  DOCKER_USERNAME: Prateek
   IMAGE_NAME: github_action_nginx
 
 jobs:
@@ -19,9 +18,7 @@ jobs:
       run: echo docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/IMAGE_NAME:latest
 
     - name: Docker Login
-      env:
-        DOCKER_PASSWORD: 213124141 
-      run: echo docker login --username=$DOCKER_USERNAME --password=DOCKER_PASSWORD
+      run: echo docker login --username=$DOCKER_USERNAME --password=${{secrets.DOCKER_PASSWORD}}
 
     - name: Docker Publish
       run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
