--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -1,7 +1,9 @@
 name: Exploring variables and secrets
 
-on: 
-    push
+on:
+  schedule:
+    - cron: '*/1 * * * *'
+    #push
 
 #using variables at workflow level, we can also use then in step level and jon level, in job level it will be
 #used inside job name docker and in step level used inside step we can use variable in ${{CONTAINER_REGISTRY}} this way also
