--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -1,8 +1,8 @@
 name: Exploring variables and secrets
 
-on:
-  schedule:
-    - cron: '*/2 * * * *' 
+on: workflow_dispatch
+ # schedule:
+   # - cron: "*/1 * * * *"
     #push
 
 #using variables at workflow level, we can also use then in step level and jon level, in job level it will be
