--- a/.github/workflows/cronconcurrency.yml
+++ b/.github/workflows/cronconcurrency.yml
@@ -29,7 +29,7 @@ jobs:
     needs: docker
     concurrency: 
         group: Production-deployment
-        cancel-in-progress: true
+        cancel-in-progress: false
     runs-on: ubuntu-latest
     steps:
     - name: Docker Run
