added push and disppatch

--- a/.github/workflows/cronconcurrency.yml
+++ b/.github/workflows/cronconcurrency.yml
@@ -1,6 +1,8 @@
 name: COncurrency and cron
 
-on: workflow_dispatch
+on:
+    push: 
+    workflow_dispatch:
  # schedule:
    # - cron: "*/1 * * * *"
     #push
