--- a/.github/workflows/matrix-config.yml
+++ b/.github/workflows/matrix-config.yml
@@ -13,7 +13,7 @@ jobs:
               run: docker info
 
             - name: Run Images
-              run: docker run hellow-world
+              run: docker run hello-world
         
     deploy_on_windows:
         runs-on: windows-latest
@@ -22,4 +22,4 @@ jobs:
               run: docker info
 
             - name: Run Images
-              run: docker run hellow-world
+              run: docker run hello-world
