--- a/.github/workflows/matrix-config.yml
+++ b/.github/workflows/matrix-config.yml
@@ -6,20 +6,24 @@ on:
 
 #docker comes preinstalled with docker in VM
 jobs:
-    deploy_on_ubuntu:
-        runs-on: ubuntu-latest
+    deploy:
+        strategy:
+          matrix:
+            os: [ubuntu-latest, ubuntu-20.04, windows-latest]
+            images: [hello-world, alpine]
+        runs-on: ${{matrix.os}}
         steps:
             - name: Echo Docker Details
               run: docker info
 
-            - name: Run Images
-              run: docker run hello-world
+            - name: Run Images on ${{matrix.os}}
+              run: docker run ${{matrix.images}}
         
-    deploy_on_windows:
-        runs-on: windows-latest
-        steps:
-            - name: Echo Docker Details
-              run: docker info
+  #  deploy_on_windows:
+     ##   runs-on: windows-latest
+       # steps:
+          #  - name: Echo Docker Details
+           #   run: docker info
 
-            - name: Run Images
-              run: docker run hello-world
+           # - name: Run Images
+           #   run: docker run hello-world
