--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -1,9 +1,9 @@
 name: Exploring variables and secrets
 
-on: workflow_dispatch
+on: #workflow_dispatch
  # schedule:
    # - cron: "*/1 * * * *"
-    #push
+    push:
 
 #using variables at workflow level, we can also use then in step level and jon level, in job level it will be
 #used inside job name docker and in step level used inside step we can use variable in ${{CONTAINER_REGISTRY}} this way also
@@ -26,6 +26,7 @@ jobs:
       run: echo docker push $CONTAINER_REGISTRY/${{ vars.DOCKER_USERNAME }}/$IMAGE_NAME:latest
 
   deploy:
+    if: github.ref =='refs/heads/main'
     needs: docker
     runs-on: ubuntu-latest
     steps:
